src/components/navbar/navbar.css
.Navbar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 2rem 6rem;
}
.Navbar__Links{
    display: flex;
    flex: 1;
    justify-content: flex-start;
    align-items: center;
}
.Navbar__Links-logo{
    margin-top: 2px;
}

.Navbar__Links-container p a:hover{
    color: var(--gradient-text);
}

.Navbar__Links-logo h1{
    font-family: monospace;
    color: white;
    font-size: 30px;
    font-weight: 800;
    letter-spacing: 2px;
}

.Navbar__Links-container{
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
}
    
.Navbar__Links-container p, .Navbar__menu-container-links p{
    color: #fff;
    font-family: sans-serif;
    font-weight: 500;
    font-size: 18px;
    line-height: 25px;
    text-transform: capitalize;
    margin: 0 1rem;
    cursor: pointer;
}

.Navbar__menu {
    margin-left: 1rem;
    position: relative;
    display: none;
}

.Navbar__menu svg {
    cursor: pointer;
}

.Navbar__menu-container {
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    flex-direction: column;
    
    text-align: end;
    background: var(--color-footer);
    padding: 2rem;
    position: absolute;
    right: 0;
    top: 40px;
    margin-top: 1rem;
    min-width: 210px;
    border-radius: 5px;
    box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);

}

.Navbar__menu-container p {
      margin: 1rem 0;
}
@media screen and (max-width: 1050px) {
    .Navbar__Links-container {
        display: none;
    }

    .Navbar__menu{
        display: flex;
    }
}
@media screen and (max-width: 700px) {
    .Navbar {
        padding: 2rem 4rem;
    }
}

@media screen and (max-width: 550px) {
    .Navbar {
        padding: 2rem;
        position: relative;
        z-index: 1000;
    }

   
    .Navbar__menu-container {
        top: 20px;
    }
}

